--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -49,13 +49,55 @@
 }
 
 .header-box button {
-	background-color: #f89e34;
-	color: #fff;
-	border: none;
-	font-size: 20px;
-	padding: 5px 10px 5px 10px;
-	margin-top: 20px;
+	--color: #f89e34;
+	font-family: inherit;
+	display: inline-block;
+	width: 8em;
+ 	height: 2.6em;
+ 	line-height: 2.5em;
+ 	margin: 20px;
+ 	position: relative;
+ 	overflow: hidden;
+ 	border: 2px solid var(--color);
+ 	transition: color .5s;
+ 	z-index: 1;
+ 	font-size: 17px;
+ 	border-radius: 6px;
+ 	font-weight: 500;
+ 	color: var(--color);
+	text-align: center;
 }
+
+.header-box button:before {
+	content: "";
+ 	position: absolute;
+ 	z-index: -1;
+ 	background: var(--color);
+ 	height: 150px;
+ 	width: 200px;
+ 	border-radius: 50%;
+}
+
+.header-box button:hover {
+	color: #fff;
+}
+
+.header-box button:before {
+	top: 100%;
+	left: 100%;
+	transition: all .7s;
+}
+
+.header-box button:hover:before {
+	top: -30px;
+	left: -30px;
+}
+
+.header-box button:active:before{
+	background-color: var(--color);
+	transition: background 0s;
+}
+
 .image-container {
 	display: flex;
 	align-items: center;
